fix: wrap remaining mint config elements

--- a/src/client/styles/molecule/position.scss
+++ b/src/client/styles/molecule/position.scss
@@ -31,6 +31,7 @@
     #{$c}flex-shrink-1 { flex-shrink: 1; }
     #{$c}flex-basis-0 { flex-basis: 0; }
     #{$c}flex-wrap { flex-wrap: wrap; }
+    #{$c}flex-wrap-reverse { flex-wrap: wrap-reverse; }
 
     // Height
     #{$c}h-0 { height: 0; }
